--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,12 +45,9 @@ dependencies:
   install_plugin: ^2.1.0
   intl: ^0.20.1
   kenburns_nullsafety: ^1.0.1
-  manga_page_view: ^1.0.5
+  media_kit: ^1.2.0
+  media_kit_video: ^1.3.0
   media_kit_libs_video: ^1.0.6
-  media_kit_video:
-    git:
-      url: https://github.com/Schnitzel5/media-kit.git
-      path: media_kit_video
   dartotsu_extension_bridge:
     git:
       url: https://github.com/RyanYuuki/DartotsuExtensionBridge.git
@@ -62,13 +59,14 @@ dependencies:
   path_provider: any
   permission_handler: ^11.3.1
   provider: ^6.1.2
-  screen_brightness: 2.1.5
   scrollable_positioned_list: ^0.3.8
   shimmer: ^3.0.0
   smooth_page_indicator: ^1.2.0+3
   super_sliver_list: ^0.4.1
+  share_plus: ^11.0.0
   url_launcher: any
-  volume_controller: 3.4.0
+  volume_controller: ^3.4.0 
+  screen_brightness: ^2.1.4 
   window_manager: ^0.4.3
   isar: 3.1.0+1
   isar_flutter_libs: 3.1.0+1
@@ -78,6 +76,9 @@ dependencies:
   archive: any
   image: any
   flutter_widget_from_html: ^0.17.0
+  timeago: ^3.7.1
+  flutter_staggered_animations: ^1.1.1
+  material_symbols_icons: ^4.2867.0
 dev_dependencies:
   build_runner: ^2.4.11
   change_app_package_name: ^1.4.0
